# macroeconomic_agent

./: README.md  pyproject.toml  run_agent.py
agent_sql_economic/: __init__.py  agent.py  configuration.py  data_lookup.py  main.py  markdown_utils.py  module.py
agent_sql_economic/sub_agents/answer_generation_agent/: __init__.py  agent.py
agent_sql_economic/sub_agents/query_generation_agent/: __init__.py  agent.py
agent_sql_economic/sub_agents/query_runner_agent/: __init__.py  agent.py
agent_sql_economic/sub_agents/query_validation_agent/: __init__.py  agent.py
data/: db.sqlite  world_bank_data_2025.csv
test/agent_sql_economic/: data_lookup_test.py  markdown_utils_test.py
test/integration_tests/: test_agent_sql_economic.py
